syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.trade.proto";
option java_outer_classname = "TradeProto";

package trade;


service Trade {
  
  rpc GetTrade(RequestId) returns (ReplyTrade) {}
}

message RequestId {
  int64 id = 1;
}

message ReplyTrade {
     int64 id = 1;
	 int64 clid = 2;
	 int64 trade_no = 3;
	 string destination_name = 4;
	 string destination_name_kana = 5;
	 string destination_zip = 6;
	 string destination_address = 7;
	 string destination_tel = 8;
	 string destination_daytime_conadr = 9;
	 string destination_store_cd = 10;
	 string destination_name_edit = 11;
	 string destination_address_edit = 12;
	 string destination_tel_edit = 13;
	 string destination_zip_edit = 14;
	 string destination_daytime_conadr_edit = 15;
	 string destination_name_kana_edit = 16;
	 string destination_store_cd_edit = 17;
	 string user_cmt = 18;
	 string buy_date = 19;
	 int32 del_flg = 20;
	 string create_date = 21;
	 string update_date = 22;
	 int32 create_id = 23;
	 int32 update_id = 24;
	 string create_pgm_id = 25;
	 string update_pgm_id = 26;
	 int64 version = 27;
}